# talk-ubun

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
src/: audio.rs  avatar.ts  config.rs  graph.ts  history.rs  inject.rs  main.rs  main.ts  soniox.rs  status.rs  styles.css  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: test_inject.rs  test_soniox.rs
src-tauri/src/: assistant.rs  audio.rs  config.rs  draft.rs  inject.rs  lib.rs  main.rs  session.rs  soniox.rs
