[package]
name = "talk-ubun"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
cpal = "0.18.1"
dotenvy = "0.15.7"
enigo = "0.6.1"
futures-util = "0.3.32"
global-hotkey = "0.8.0"
ksni = "0.2"
notify-rust = "4.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
